2020-09-21  James Savage  <james.savage@apple.com>

        WKWebView Swift overlay has mis-annotated nullability for evaluateJavaScript
        <http://webkit.org/b/216198>
        <rdar://problem/68035950>

        Reviewed by Darin Adler.

        Due to a mistranslation of evaluateJavaScript, we are vending an API which does not expect
        to receive nil as a valid result value. This change fixes the crash, but does not yet fix
        the API to have the correct signature. That will come in a later patch.

        To fix the crash, we need to produce a valid Result<Any, Error> to pass back to clients.
        Fortunately, instead of inventing something clever, we can just use nil. It's valid to box
        optional values into Any, and clients can technically retrieve them with the right dynamic cast
        as well. Since client code must be using dynamic casting to convert the result Any to a usable
        type, and because in the case where we now return a new value at runtime we would have previously
        crashed, this shouldn't have any binary compatibility impact either.

        To better validate these changes, I also add new unit tests for the conversion of JavaScript
        results into Swift values, including a test for the deprecated API.

        * SwiftOverlay/SwiftOverlay/ObjectiveCBlockConversions.swift: Added. For clarity I'm factoring
        helper methods into a single namespace, as it also makes a nice place to document their expectations.
        (ObjectiveCBlockConversion.exclusive.exclusive(_:)): This is renamed from the free function,
            makeResultHandler(_:). It still has the same fatalError (now precondition) as before, but
            hopefully a better name to clarify that it expects exactly-one value.
        (ObjectiveCBlockConversions.boxingNilAsAnyForCompatibility(_:)): This is a variant of exclusive(_:)
            that makes the tradeoff of boxing any nil values as Any to avoid crashing. This is still safe,